# ALMA_search

./: .gitignore  README.md  alma_nearby_search.py  alma_search.html  pyproject.toml  structure.txt
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  line_catalog.rst  make.bat  output.rst  requirements.txt  usage.rst
examples/: alma_target_coor_first1.txt  alma_target_result_first1.csv
src/alma_search/: __init__.py  cli.py  io.py  lines.py  search.py  utils.py
tests/: test_cli_e2e.py  test_io.py  test_lines.py  test_search.py
