[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alma-search"
version = "0.1.0"
description = "Search the ALMA archive around input sky positions and export nearby observations to CSV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "astropy>=5.0",
  "pandas>=2.0",
  "pyvo>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[project.scripts]
alma-search = "alma_search.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
